--- a/src/Views/realTimeProducts.Handlebars
+++ b/src/Views/realTimeProducts.Handlebars
@@ -12,7 +12,7 @@
     </ul>
     
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/Client.js"></script>
+    <script src="/src/Public/Cliente.js"></script>
 
 </body>
 </html>
